// Vitest Snapshot v1

exports[`datatype > 42 > array > noArgs 1`] = `
[
  79654,
  "2eiXX/J/*&",
  86617,
  60111,
  70807,
  "\\"&{dnx4!1}",
  61748,
  61165,
  "!I#<QYF-%<",
  "C6K)jZ3DP|",
]
`;

exports[`datatype > 42 > array > with length 1`] = `
[
  79654,
  "2eiXX/J/*&",
  86617,
  60111,
]
`;

exports[`datatype > 42 > bigInt > noArgs 1`] = `379177551410048n`;

exports[`datatype > 42 > bigInt > with value 1`] = `37n`;

exports[`datatype > 42 > boolean 1`] = `false`;

exports[`datatype > 42 > boolean 2`] = `true`;

exports[`datatype > 42 > boolean 3`] = `true`;

exports[`datatype > 42 > boolean 4`] = `false`;

exports[`datatype > 42 > boolean 5`] = `true`;

exports[`datatype > 42 > datetime > noArgs 1`] = `2031-03-14T21:33:22.114Z`;

exports[`datatype > 42 > datetime > with given number 1`] = `1994-03-20T17:23:00.629Z`;

exports[`datatype > 42 > datetime > with max 1`] = `1994-07-11T09:43:47.230Z`;

exports[`datatype > 42 > datetime > with min 1`] = `1801-04-11T15:13:06.330Z`;

exports[`datatype > 42 > datetime > with min and max 1`] = `1689-09-09T08:39:09.444Z`;

exports[`datatype > 42 > float > noArgs 1`] = `37453.64`;

exports[`datatype > 42 > float > repeated 1`] = `37453.64`;

exports[`datatype > 42 > float > repeated 2`] = `79653.5`;

exports[`datatype > 42 > float > repeated 3`] = `95070.48`;

exports[`datatype > 42 > float > repeated 4`] = `18343.29`;

exports[`datatype > 42 > float > repeated 5`] = `73198.66`;

exports[`datatype > 42 > float > repeated 6`] = `77968.32`;

exports[`datatype > 42 > float > with max 1`] = `25.84`;

exports[`datatype > 42 > float > with min 1`] = `37411.64`;

exports[`datatype > 42 > float > with min and max 1`] = `-0.43`;

exports[`datatype > 42 > float > with min, max and precision 1`] = `-0.4261`;

exports[`datatype > 42 > hexadecimal > noArgs 1`] = `"8"`;

exports[`datatype > 42 > hexadecimal > with length 1`] = `"8BE4ABdd39321aD7d3fe01FfCE404F4d6db0906bd8"`;

exports[`datatype > 42 > json 1`] = `"{\\"foo\\":79654,\\"bar\\":\\"2eiXX/J/*&\\",\\"bike\\":86617,\\"a\\":60111,\\"b\\":70807,\\"name\\":\\"\\\\\\"&{dnx4!1}\\",\\"prop\\":61748}"`;

exports[`datatype > 42 > number > noArgs 1`] = `37454`;

exports[`datatype > 42 > number > repeated 1`] = `2`;

exports[`datatype > 42 > number > repeated 2`] = `5`;

exports[`datatype > 42 > number > repeated 3`] = `6`;

exports[`datatype > 42 > number > repeated 4`] = `1`;

exports[`datatype > 42 > number > repeated 5`] = `5`;

exports[`datatype > 42 > number > with max 1`] = `26`;

exports[`datatype > 42 > number > with min 1`] = `37412`;

exports[`datatype > 42 > number > with min and max 1`] = `-1`;

exports[`datatype > 42 > number > with min, max and precision 1`] = `-0.43`;

exports[`datatype > 42 > string > noArgs 1`] = `"Cky2eiXX/J"`;

exports[`datatype > 42 > string > with length 1`] = `"Cky2eiXX/J/*&Kq@X.b]\\"&{dnx4!1}2Z=YQ!I#<QYF"`;

exports[`datatype > 42 > uuid 1`] = `"5cf2bc99-2721-407d-992b-a00fbdf302f2"`;

exports[`datatype > 42 > uuid 2`] = `"94980604-8962-404f-9371-c9368f970d9a"`;

exports[`datatype > 42 > uuid 3`] = `"2710fff9-c640-413a-b7a1-97d02e642ac4"`;

exports[`datatype > 42 > uuid 4`] = `"6838920f-dc7f-46ee-9be5-19380f5d6b48"`;

exports[`datatype > 42 > uuid 5`] = `"d95f4984-24c2-410f-ac63-400d3bbbcc91"`;

exports[`datatype > 1211 > array > noArgs 1`] = `
[
  "Kti5-}$_/\`",
  76408,
  35403,
  69406,
  "l\\"h^]dnwI<",
  "|p|5KWu3/C",
  "|Jh!E=x\\"RH",
  "/5V<1bEQuA",
  "p=DW9F=V1(",
  "7a6.$boN\\\\7",
]
`;

exports[`datatype > 1211 > array > with length 1`] = `
[
  "Kti5-}$_/\`",
  76408,
  35403,
  69406,
]
`;

exports[`datatype > 1211 > bigInt > noArgs 1`] = `948721906162743n`;

exports[`datatype > 1211 > bigInt > with value 1`] = `8n`;

exports[`datatype > 1211 > boolean 1`] = `true`;

exports[`datatype > 1211 > boolean 2`] = `false`;

exports[`datatype > 1211 > boolean 3`] = `true`;

exports[`datatype > 1211 > boolean 4`] = `true`;

exports[`datatype > 1211 > boolean 5`] = `false`;

exports[`datatype > 1211 > datetime > noArgs 1`] = `2092-02-20T03:42:04.341Z`;

exports[`datatype > 1211 > datetime > with given number 1`] = `2000-06-14T02:54:42.082Z`;

exports[`datatype > 1211 > datetime > with max 1`] = `2001-03-20T11:14:25.251Z`;

exports[`datatype > 1211 > datetime > with min 1`] = `2065-11-10T19:27:20.915Z`;

exports[`datatype > 1211 > datetime > with min and max 1`] = `1789-03-26T15:44:45.219Z`;

exports[`datatype > 1211 > float > noArgs 1`] = `92851.09`;

exports[`datatype > 1211 > float > repeated 1`] = `92851.09`;

exports[`datatype > 1211 > float > repeated 2`] = `45901.06`;

exports[`datatype > 1211 > float > repeated 3`] = `89346.28`;

exports[`datatype > 1211 > float > repeated 4`] = `77826.18`;

exports[`datatype > 1211 > float > repeated 5`] = `22556.85`;

exports[`datatype > 1211 > float > repeated 6`] = `12988.8`;

exports[`datatype > 1211 > float > with max 1`] = `64.07`;

exports[`datatype > 1211 > float > with min 1`] = `92809.09`;

exports[`datatype > 1211 > float > with min and max 1`] = `61.07`;

exports[`datatype > 1211 > float > with min, max and precision 1`] = `61.0658`;

exports[`datatype > 1211 > hexadecimal > noArgs 1`] = `"E"`;

exports[`datatype > 1211 > hexadecimal > with length 1`] = `"EaDB42F0e3f4A973fAB0AeefCE96DFCF49cD438dF9"`;

exports[`datatype > 1211 > json 1`] = `"{\\"foo\\":\\"Kti5-}$_/\`\\",\\"bar\\":76408,\\"bike\\":35403,\\"a\\":69406,\\"b\\":\\"l\\\\\\"h^]dnwI<\\",\\"name\\":\\"|p|5KWu3/C\\",\\"prop\\":\\"|Jh!E=x\\\\\\"RH\\"}"`;

exports[`datatype > 1211 > number > noArgs 1`] = `92852`;

exports[`datatype > 1211 > number > repeated 1`] = `6`;

exports[`datatype > 1211 > number > repeated 2`] = `3`;

exports[`datatype > 1211 > number > repeated 3`] = `6`;

exports[`datatype > 1211 > number > repeated 4`] = `5`;

exports[`datatype > 1211 > number > repeated 5`] = `1`;

exports[`datatype > 1211 > number > with max 1`] = `64`;

exports[`datatype > 1211 > number > with min 1`] = `92810`;

exports[`datatype > 1211 > number > with min and max 1`] = `61`;

exports[`datatype > 1211 > number > with min, max and precision 1`] = `61.07`;

exports[`datatype > 1211 > string > noArgs 1`] = `"wKti5-}$_/"`;

exports[`datatype > 1211 > string > with length 1`] = `"wKti5-}$_/\`4hHA0afl\\"h^]dnwI<q|p|5KWu3/CZ|J"`;

exports[`datatype > 1211 > uuid 1`] = `"e7ec32f0-a2a3-4c65-abbd-0caabde64dfd"`;

exports[`datatype > 1211 > uuid 2`] = `"f379e325-9f7c-4064-a086-f23942b68e5f"`;

exports[`datatype > 1211 > uuid 3`] = `"d4694649-2183-4b32-8bd7-a336639d6997"`;

exports[`datatype > 1211 > uuid 4`] = `"10ab829b-742c-4a8b-b732-98d718d77069"`;

exports[`datatype > 1211 > uuid 5`] = `"7b91ce88-effb-4d1d-93bb-ad759e00b86c"`;

exports[`datatype > 1337 > array > noArgs 1`] = `
[
  56052,
  21258,
  54308,
  3397,
  23538,
  "X9@{:e=+kD",
  62850,
  12505,
  "|/Jqjjj!BL",
  38106,
]
`;

exports[`datatype > 1337 > array > with length 1`] = `
[
  56052,
  21258,
  54308,
  3397,
]
`;

exports[`datatype > 1337 > bigInt > noArgs 1`] = `251225403255239n`;

exports[`datatype > 1337 > bigInt > with value 1`] = `25n`;

exports[`datatype > 1337 > boolean 1`] = `false`;

exports[`datatype > 1337 > boolean 2`] = `true`;

exports[`datatype > 1337 > boolean 3`] = `false`;

exports[`datatype > 1337 > boolean 4`] = `false`;

exports[`datatype > 1337 > boolean 5`] = `false`;

exports[`datatype > 1337 > datetime > noArgs 1`] = `2018-10-28T08:46:11.896Z`;

exports[`datatype > 1337 > datetime > with given number 1`] = `1992-12-13T04:13:59.232Z`;

exports[`datatype > 1337 > datetime > with max 1`] = `1993-03-02T00:10:04.335Z`;

exports[`datatype > 1337 > datetime > with min 1`] = `1747-07-16T01:19:54.159Z`;

exports[`datatype > 1337 > datetime > with min and max 1`] = `1669-06-22T01:21:21.236Z`;

exports[`datatype > 1337 > float > noArgs 1`] = `26202.2`;

exports[`datatype > 1337 > float > repeated 1`] = `26202.2`;

exports[`datatype > 1337 > float > repeated 2`] = `56052.42`;

exports[`datatype > 1337 > float > repeated 3`] = `15868.24`;

exports[`datatype > 1337 > float > repeated 4`] = `21258.55`;

exports[`datatype > 1337 > float > repeated 5`] = `27812.37`;

exports[`datatype > 1337 > float > repeated 6`] = `54307.53`;

exports[`datatype > 1337 > float > with max 1`] = `18.08`;

exports[`datatype > 1337 > float > with min 1`] = `26160.2`;

exports[`datatype > 1337 > float > with min and max 1`] = `-12.92`;

exports[`datatype > 1337 > float > with min, max and precision 1`] = `-12.9153`;

exports[`datatype > 1337 > hexadecimal > noArgs 1`] = `"5"`;

exports[`datatype > 1337 > hexadecimal > with length 1`] = `"5c346ba075bd57F5A62B82d72AF39CBBB07a98cbA8"`;

exports[`datatype > 1337 > json 1`] = `"{\\"foo\\":56052,\\"bar\\":21258,\\"bike\\":54308,\\"a\\":3397,\\"b\\":23538,\\"name\\":\\"X9@{:e=+kD\\",\\"prop\\":62850}"`;

exports[`datatype > 1337 > number > noArgs 1`] = `26202`;

exports[`datatype > 1337 > number > repeated 1`] = `1`;

exports[`datatype > 1337 > number > repeated 2`] = `3`;

exports[`datatype > 1337 > number > repeated 3`] = `1`;

exports[`datatype > 1337 > number > repeated 4`] = `1`;

exports[`datatype > 1337 > number > repeated 5`] = `1`;

exports[`datatype > 1337 > number > with max 1`] = `18`;

exports[`datatype > 1337 > number > with min 1`] = `26160`;

exports[`datatype > 1337 > number > with min and max 1`] = `-13`;

exports[`datatype > 1337 > number > with min, max and precision 1`] = `-12.92`;

exports[`datatype > 1337 > string > noArgs 1`] = `"9U/4:SK$>6"`;

exports[`datatype > 1337 > string > with length 1`] = `"9U/4:SK$>6QX9@{:e=+kD)[B,e|/Jqjjj!BLGDWQgC"`;

exports[`datatype > 1337 > uuid 1`] = `"48234870-5389-445f-8b41-c61a52bf27dc"`;

exports[`datatype > 1337 > uuid 2`] = `"cc057669-8c53-474d-a677-226d3e8ed92f"`;

exports[`datatype > 1337 > uuid 3`] = `"fe6d8b8b-0db9-4fa2-b265-abc0a5d0ccf5"`;

exports[`datatype > 1337 > uuid 4`] = `"0b87afbd-8949-4dfb-8d04-19f4fe7458b2"`;

exports[`datatype > 1337 > uuid 5`] = `"0bcea83c-a7ea-428e-85db-d448f2b777a6"`;
